--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Best Online Coding Events, Challenges & Webinars | Coding Ninjas</title>
-    <base href="/" />
+    <base href="/Coding_Ninjas_Events_Page" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
